--- a/scroll.html
+++ b/scroll.html
@@ -440,7 +440,7 @@ footer p {
             neque sunt in? Id, necessitatibus quos quisquam distinctio
             laudantium fugiat?
           </p>
-          <a href="#tours" class="scroll-link btn btn-white">explore tours</a>
+          <a href="#tours" class="scroll-link btn btn-white">My projects</a>
         </div>
       </div>
     </header>
@@ -472,7 +472,5 @@ footer p {
     <a class="scroll-link top-link" href="#home">
       <i class="fas fa-arrow-up"></i>
     </a>
-    <!-- javascript -->
-    <script src="app.js"></script>
   </body>
 </html>
